versions/1.21.11/translated/uk_ua/develop/class-tweakers/index.md
---
title: Твікери класу
description: Дізнайтеся, що таке твікери класу та як їх налаштувати.
authors:
  - cassiancc
  - Earthcomputer
  - its-miroma
  - MildestToucan
---

Твікери класу, раніше відомі як розширювачі доступу, перш ніж отримати подальшу функціональність, надають інструменти трансформації, що доповнюють маніпуляції байт-кодом міксина. Вони також дозволяють зробити деякі модифікації середовища виконання доступними в середовищі розробки.

::: warning

Твікери класу не є специфічними для певної версії Minecraft, але доступні лише починаючи з 0.18.0 Завантажувача Fabric і можуть націлюватися лише на класи стандартного Minecraft.

:::

## Налаштування {#setup}

### Формат файлу {#file-format}

Файли твікерів класу зазвичай називаються як ваш ID мода, `example-mod.classtweaker`, щоб допомогти плаґінам IDE їх розпізнати. Їх слід зберігати в `resources`.

У першому рядку файлу має бути такий заголовок:

```text
classTweaker v1 named
```

Файли налаштування класу можуть містити порожні рядки та коментарі, що починаються з `#`. Коментарі можуть починатися в кінці рядка.

Хоча конкретний синтаксис залежить від функції, кожна модифікація оголошується в окремих рядках. Елементи запису можна відокремлювати будь-якими пробілами, включаючи Tab.

### Указівка ​​розташування файлу {#specifying-the-file-location}

Розташування файлу твікера класу має бути вказано у ваших файлах `build.gradle` і `fabric.mod.json`. Пам’ятайте, що ви також повинні залежати від 0.18.0 Завантажувача Fabric або новішої версії, щоб використовувати твікери класу.

Специфікації все ще називаються на честь розширювачів доступу, щоб зберегти зворотну сумісність.

#### build.gradle {#build-gradle}

@[code lang=gradle:no-line-numbers transcludeWith=:::classtweaker-setup:gradle:::](@/reference/1.21.11/build.gradle)

#### fabric.mod.json {#fabric-mod-json}

```json:no-line-numbers
...

"accessWidener": "example-mod.classtweaker",

...
```

Після вказівки розташування файлу у файлі `build.gradle` перезавантажте проєкт Gradle в IDE.

## Перевірка файлу {#validating-the-file}

Усталено твікер класу ігноруватиме записи, що посилаються на цілі модифікації, які неможливо знайти. Щоб перевірити, чи всі класи, поля та методи, указані у файлі, дійсні, запустіть завдання Gradle `validateAccessWidener`.

Помилки вкажуть на будь-який недійсний запис, але вони можуть стосуватися того, яка частина запису недійсна.
